# X-ray_VLM_Dataset

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_gui.py
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
GUI_Dataset/: Add_NewClass.py  Moved_crops_json_updation_utility.py  README.md  missing_crops_detector.py  reviewProposals_gui.py
docs/: bbox-identity.md  gui-smoke-tests.md  legacy-migration.md
specs/001-dataset-curation-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-results.md
specs/002-annotation-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/xray_curation/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/integration/: test_annotation_editor_pre_crop_browsing.py  test_annotation_editor_workflow.py  test_crop_browser_workflow.py  test_curation_contracts.py  test_external_moves_workflow.py  test_label_standardization.py  test_large_partition_manifest.py  test_missing_crops_workflow.py  test_partition_crop_generation.py  test_resume_refresh_workflow.py
tests/unit/: test_affected_crop_refresh.py  test_annotation_editor_geometry.py  test_annotation_editor_guidance.py  test_annotation_editor_pending.py  test_annotation_editor_service.py  test_annotation_store.py  test_bbox_identity.py  test_crop_browser_rows.py  test_labels.py  (+10 more)
(+47 files in other folders)
