[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xray-curation"
version = "0.1.0"
description = "Local X-ray/VLM dataset curation tools and GUI services"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
    "tqdm>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
xray-curation = "xray_curation.cli:main"
xray-curation-gui = "xray_curation.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: integration tests over fixture datasets",
]
